--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
   <title>Resume for Edmund Wippler</title>
-  
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
